# fastapi-identidade

./: README.md  pyproject.toml
fastid/: app.py
templates/: home.html  profile.html
